# cookiecutter-pylib

./: .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  requirements.in  requirements.txt  tox.ini
.github/workflows/: test.yml
tests/: test_bake.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_name}}/.github/workflows/: publish.yml
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/src/{{cookiecutter.module_name}}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_name}}/tests/: test_import.py
